@@ -134,6 +134,9 @@
 <p>Fixed SMTP explicit routing address parsing.</p>
 </li>
 <li>
+<p>Fixed a bug that made XMail incorrectly handle extremely long header line lengths.</p>
+</li>
+<li>
 <p>Faster shutdown time on Unix systems.</p>
 </li>
 <li>
